k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webpage-upload
  labels:
    app.kubernetes.io/name: webpage-upload
